@@ -5,7 +5,7 @@ This file is generated! See scripts/docs_collector.py
 [[metricbeat-metricset-golang-expvar]]
 === Golang expvar metricset
 
-experimental[]
+beta[]
 
 include::../../../module/golang/expvar/_meta/docs.asciidoc[]
 
